MDEV-25121 innodb_flush_method=O_DIRECT fails on compressed tables

Several bugs existed in the InnoDB file system interface code,
mostly not affecting Microsoft Windows, and not visible on storage
that uses a 512-byte block size.

fil_node_open_file_low(): Only avoid setting O_DIRECT on
ROW_FORMAT=COMPRESSED tables that use KEY_BLOCK_SIZE=1 or 2
(1024 or 2048 bytes).

fil_ibd_create(): Avoid setting O_DIRECT on ROW_FORMAT=COMPRESSED tables
that use KEY_BLOCK_SIZE=1 or 2 (1024 or 2048 bytes).

fil_node_t::find_metadata(): Require fstat() to be always invoked
outside Microsoft Windows, so that fil_node_t::block_size can be set.

fil_node_t::read_page0(): Rely on find_metadata() to assign block_size.

This was tested on GNU/Linux on an SSD where the block size is 4096 bytes.